--- a/fronted/package.json
+++ b/fronted/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mernapp",
+  "homepage": "https://shivam988931.github.io/FoodWing/fronted",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +13,7 @@
     "bootstrap-dark-5": "^1.1.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -20,6 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
